--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,75 @@
     --font-inter: 'Inter', sans-serif;
 }
 
+/* Scrollbarwidth */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: var(--secondary-color); 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--primary-color); 
+    border-radius: 50px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #e4c247; 
+  }
+
 /* button */
 
 body{
     font-family: var(--font-inter);
+    cursor: none;
+}
+
+
+/* CSS  for cursor */
+
+    .cursor{
+        z-index: 999;
+        position: fixed;
+        background-color: var(--secondary-color);
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        pointer-events: none;
+        box-shadow: 0 0 20px #BF45FF, 0 0 60px #BF45FF, 0 0 100px #BF45FF;
+        animation: colors 5s infinite;
+        /* transform:  translate(-50%, -50%); */
+        display: none;
+    }
+    @keyframes colors{
+        0%{
+            filter: hue-rotate(0deg);
+        }
+        100%{
+            filter: hue-rotate(360deg);
+        }
+    }
+
+
+    .cursor:before{
+        content: '';
+        position: absolute;
+        background-color: var(--secondary-color);
+        width: 50px;
+        height: 50px;
+        opacity: 0.2;
+        transform: translate(-30%, -30%);
+        border-radius: 50%;
+    }
+
+/* CSS  for cursor */
+a{
+    text-decoration: none;
+    color: var(--text-color);
 }
 .wrapper{
     padding-top:100px;
@@ -21,7 +86,7 @@ body{
 }
 
 .default-btn{
-    background-color: var(--white-color);
+    background-color: transparent;
     color: var(--text-color);
     border: 2px solid var(--primary-color);
     padding: 16px 64px;
@@ -32,7 +97,8 @@ body{
     background-color: var(--primary-color);
     border: 2px solid var(--primary-color);
     font-weight: 600;
-    box-shadow: 4px 4px 24px 0px rgba(255, 200, 0, 0.548);
+    color: var(--text-color) !important;
+    box-shadow: 4px 4px 24px 0px rgba(255, 200, 0, 0.422);
 }
 .black-btn{
     background-color: var(--text-color);
@@ -104,6 +170,10 @@ body{
     border-radius: 32px;
     padding: 25px;
 }
+.service-carousel .service-card .card h4{
+    font-size: 28px;
+    font-weight: 600;
+}
 .service-carousel .service-card .card:hover{
     filter: drop-shadow(16px 16px 24px rgba(0, 0, 0, 0.15));
 }
@@ -154,8 +224,13 @@ service-cards ends */
     padding: 4px 16px ;
     background: rgba(255, 255, 255, 0.50);
     border:1px solid #222222;
+    border-radius: 50px;
 
 }
 .case-study-section .card .card-footer img{
     width: 32px;
+}
+
+.case-study-section .default-btn{
+    color: var(--white-color);
 }
