--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body{
         pointer-events: none;
         box-shadow: 0 0 20px #BF45FF, 0 0 60px #BF45FF, 0 0 100px #BF45FF;
         animation: colors 5s infinite;
-        /* transform:  translate(-50%, -50%); */
+        transform:  translate(-50%, -50%);
         display: none;
     }
     @keyframes colors{
