--- a/css/style.css
+++ b/css/style.css
@@ -303,5 +303,32 @@ service-cards ends */
 
 .cta-form{
     background-color: var(--primary-color);
-    
 }
+.cta-form h2{
+    font-weight: bold;
+    font-size: 70px;
+}
+.cta-form .form-group{
+    width: 50%;
+    margin: auto;
+}
+
+.cta-form .form-control{
+    background-color: transparent;
+    border: 2px solid var(--text-color);
+    border-radius: 32px;
+}
+.cta-form .form-control::placeholder{
+    color: #2b2b2b;
+}
+.cta-form .default-btn{
+    background-color: var(--text-color);
+    color: var(--white-color) !important;
+    font-weight: bold;
+}
+.cta-form .default-btn:hover{
+    background-color: #000000;
+    border-color: #000;
+    box-shadow: 4px 4px 20px #00000049;
+}
+
