--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,33 @@ a{
     border: 2px solid var(--primary-color);
     font-weight: 600;
 }
+
+
+.navbar .menu-icon{
+    color: var(--text-color);
+    font-size: 32px;
+    border: 1px solid var(--secondary-color);
+    border-radius: 50%;
+    padding: 8px 12px;
+}
+
+.navbar .menu-icon:hover{
+    color: var(--white-color);
+    background-color: var(--secondary-color);
+}
+
+/* Open-Menu */
+
+.open-menu{
+    display: none;
+    height: 720px;
+    width: 100%;
+    background-color: #222222;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index:4;
+}
 /* hero-section */
 .hero-section h1{
     color: var(--text-color);
