--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ service-cards ends */
 
 .cta-form{
     background-color: #ffedaf;
-    background-image: url('/techyPanda/techyPanda/images/form-background.svg');
+    background-image: url('/images/form-background.svg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
