--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* CSS varible */
 :root{
@@ -8,7 +9,8 @@
     --icon-color : #e3e3e3;
     --text-color: #222222;
     --white-color: #ffffff;
-    --font-inter: 'Inter', sans-serif;
+    /* --font-inter: 'Inter', sans-serif; */
+    --font-inter: 'Kanit', sans-serif;
 }
 
 /* Scrollbarwidth */
@@ -88,6 +90,7 @@ h2{
 a{
     text-decoration: none;
     color: var(--text-color);
+    font-family: var(--font-inter);
 }
 .wrapper{
     padding-top:100px;
@@ -132,7 +135,7 @@ a{
     font-size: 32px;
     border: 1px solid var(--secondary-color);
     border-radius: 50%;
-    padding: 8px 12px;
+    padding: 4px 12px;
 }
 
 .navbar .menu-icon:hover{
@@ -140,27 +143,51 @@ a{
     background-color: var(--secondary-color);
 }
 
-/* Open-Menu */
+.offcanvas-end{
+    width: 60%;
+    padding: 24px 42px;
+}
 
-.open-menu{
-    display: none;
-    height: 720px;
-    width: 100%;
-    background-color: #222222;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index:4;
+.offcanvas .offcanvas-body .contact-info{
+    display: flex;
+    align-items: flex-end;
+    cursor: pointer;
+}
+
+.offcanvas .offcanvas-body .contact-info h4{
+    color: var(--primary-color);
+    font-weight: bolder;
+    font-size: 32px;
+}
+.offcanvas .offcanvas-body .contact-info p{
+    color: var(--text-color);
+    font-weight: 500;
+    font-size: 24px;
+}
+
+.offcanvas .offcanvas-body .nav-opt .nav-link{
+    font-size: 62px;
+    color: var(--text-color);
+    font-weight: bold;
+}
+.offcanvas .offcanvas-body .nav-opt .nav-link:hover{
+    color: var(--secondary-color);
+}
+
+.offcanvas .offcanvas-header .btn-close{
+    padding: 14px;
+    border: 2px solid var(--primary-color) !important;
+    border-radius: 50%;
 }
 /* hero-section */
 .hero-section h1{
     color: var(--text-color);
     line-height: 78px;
     font-size: 52px;
-    font-weight: 800;
+    font-weight: 400;
 }
 .hero-section h1 span{
-    border: 2px solid var(--text-color);
+    border: 2px solid var(--primary-color);
     padding: 10px 25px;
     border-radius: 50px;
     font-weight: 600;
